[gd_scene load_steps=6 format=3 uid="uid://75ch7lkl7t6e"]

[ext_resource type="Script" path="res://src/ui/pause_menu/pause_menu.gd" id="1_mqnwv"]
[ext_resource type="Shader" path="res://shaders/invert.gdshader" id="2_ouwwy"]
[ext_resource type="Shader" path="res://shaders/gaussian_blur.gdshader" id="2_vwss6"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_to7dg"]
shader = ExtResource("2_vwss6")
shader_parameter/blur_amount = 1.4
shader_parameter/blackness = 0.5

[sub_resource type="ShaderMaterial" id="ShaderMaterial_preen"]
shader = ExtResource("2_ouwwy")

[node name="PauseMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_mqnwv")

[node name="Blur" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_to7dg")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Background" type="ColorRect" parent="."]
custom_minimum_size = Vector2(0, 150)
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -75.0
offset_bottom = 75.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.639216)

[node name="HBoxContainer" type="HBoxContainer" parent="Background"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="Background/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10
alignment = 1

[node name="ResumeButton" type="Label" parent="Background/HBoxContainer/VBoxContainer"]
layout_mode = 2
mouse_filter = 0
text = "Resume"

[node name="SettingsButton" type="Label" parent="Background/HBoxContainer/VBoxContainer"]
layout_mode = 2
mouse_filter = 0
text = "Settings"

[node name="MainMenuButton" type="Label" parent="Background/HBoxContainer/VBoxContainer"]
layout_mode = 2
mouse_filter = 0
text = "Main Menu"

[node name="BackBufferCopy" type="BackBufferCopy" parent="."]
position = Vector2(573, 323.5)
scale = Vector2(5.85, 3.335)
copy_mode = 2

[node name="Selector" type="ColorRect" parent="."]
visible = false
material = SubResource("ShaderMaterial_preen")
layout_mode = 0
offset_left = 520.0
offset_top = 277.0
offset_right = 632.0
offset_bottom = 299.0
mouse_filter = 2

[connection signal="gui_input" from="Background" to="." method="_on_background_gui_input"]
[connection signal="gui_input" from="Background/HBoxContainer/VBoxContainer/ResumeButton" to="." method="_on_resume_button_gui_input"]
[connection signal="gui_input" from="Background/HBoxContainer/VBoxContainer/SettingsButton" to="." method="_on_settings_button_gui_input"]
[connection signal="gui_input" from="Background/HBoxContainer/VBoxContainer/MainMenuButton" to="." method="_on_main_menu_button_gui_input"]
